[package]
name = "manta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.0"
async-trait = "0.1.68"
axum = "0.6.18"
axum-extra = { version = "0.7.4", features = ["cookie"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
lazy-regex = "2.5.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.0.0"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "chrono", "uuid", "postgres"] }
strum_macros = "0.24.3"
time = "0.3.21"
tokio = { version = "1.28.1", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["fs", "cors"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
anyhow = "1.0.71"
httpc-test = "0.1.2"
